<resources>
    <string name="app_name">NSC News</string>
    <string name="login">Login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="article_title">Title</string>
    <string name="article_subtitle">Subtitle</string>
    <string name="article_abstract">Abstract</string>
    <string name="article_body">Body</string>
    <string name="category">Category</string>
    <string name="user_id">User ID</string>
    <string name="date">Date</string>
    <string name="replace_image">Replace image</string>
    <string name="article_image">Article Image</string>
    <string name="button">Button</string>
    <string name="blue_one">#04284A</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="remember_me">Remember me</string>
    <string name="error_message">Incorrect username or password. Double check and try again, please.</string>
</resources>